<resources>
    <string name="app_name">Q-Hope</string>
    <string name="home_label">Beranda</string>
    <string name="hello_label">Hai,</string>
    <string name="your_location_label">Lokasi kamu</string>
    <string name="failed_to_get_location_message">Gagal memuat lokasi. Izinkan Q-Hope untuk mengakses lokasimu.</string>
    <string name="recommendation_hospitals_label">Recommendation hospitals</string>
    <string name="our_hospitals_label">Mitra rumah sakit kami</string>
    <string name="book_a_room_label">Pesan Kamar</string>
    <plurals name="room_available_label">
        <item quantity="one">%d tempat tidur tersisa</item>
        <item quantity="few">%d tempat tidur tersisa</item>
        <item quantity="other">Tersedia</item>
    </plurals>
    <string name="verification_status_not_upload_title">Halo!</string>
    <string name="verification_status_uploaded_title">Kamu telah…</string>
    <string name="verification_status_not_upload_description">Ayo verifikasi identitas kamu untuk dapat memesan tempat tidur rumah sakit.</string>
    <string name="verification_status_accepted_description">Konfirmasi identitas kamu sebelum melihat aplikasi lebih jauh.</string>
    <string name="verification_status_verified_description">Sekarang kamu bisa memesan tempat tidur rumah sakit.</string>
    <string name="verification_status_not_verified_description">Kami mohon maaf atas ditolaknya verifikasi. Ayo periksa.</string>
    <string name="verification_status_not_upload_button_label">Verifikasi</string>
    <string name="verification_status_accepted_button_label">Konfirmasi data saya</string>
    <string name="verification_status_verified_button_label">Lihat rumah sakit</string>
    <string name="verification_status_not_verified_button_label">Periksa</string>
    <string name="hospital_detail_description">Detail Rumah Sakit</string>
    <string name="location_label">Lokasi</string>
    <string name="telephone_label">Nomor Telepon</string>
    <string name="room_type_label">Tipe Tempat Tidur</string>
    <string name="per_day_label">per Hari</string>
    <string name="available_label">Tersedia</string>
    <string name="not_available_label">Tidak Tersedia</string>
    <string name="confirm_booking_label">Konfirmasi Pesanan</string>
    <string name="selected_room_type_label">Tempat tidur yang dipilih</string>
    <string name="selected_room_type">[%s tempat tidur] %s</string>
    <string name="select_date_label">Pilih tanggal</string>
    <string name="select_check_in_time_label">Pilih waktu check-in</string>
    <string name="time_selected_label">Waktu check-in telah dipilih</string>
    <string name="upload_doctor_referral_letter_label">Upload Surat Rekomendasi dari Dokter</string>
    <string name="upload_your_referral_letter_label">Upload Surat Rekomendasi dari Dokter untukmu</string>
    <string name="success_book_a_room_label">Berhasil memesan tempat tidur.</string>
    <string name="success_book_a_room_description">We\'ll process your booking and notify you for any changes soon.</string>
    <string name="go_to_booking_history_label">Ke halaman Riwayat Transaksi</string>
    <string name="back_to_home_label">Kembali ke Beranda</string>
    <string name="update_profile_banner">Ubah profilmu sebelum melanjutkan pemesanan.</string>
    <string name="update_profile_banner_button">Ke Halaman Profil</string>
    <string name="booking_confirmation_title">Pesan tempat tidur</string>
    <string name="identity_confirmation_banner">Pastikan data yang dikirimkan sudah benar. Setelah dikirim, identitas kamu tidak bisa diubah.</string>
    <string name="save">Simpan</string>
    <string name="back">Kembali</string>
    <string name="payment_method_label">Metode Pembayaran</string>
    <string name="payment_policy_agreement">By continuing you agree to our Terms of Use and Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="pay_label">Pay</string>
    <string name="payment_cancelled_message">Payment cancelled.</string>
    <string name="history_label">Riwayat</string>
    <string name="history_detail_label">Detail Riwayat</string>
    <string name="history_empty_state_title">Riwayat kamu kosong.</string>
    <string name="history_empty_state_description">Pesan tempat tidur sekarang.</string>
    <plurals name="history_night_state">
        <item quantity="one">●  %d malam</item>
        <item quantity="other">●  %d malam</item>
    </plurals>
    <string name="booking_id_label">ID Pesanan</string>
    <string name="booking_date_label">Waktu pemesanan</string>
    <string name="booking_status_label">Status</string>
    <string name="booking_refundable_label">Dapat di refund</string>
    <string name="booked_hospital_label">Rumah Sakit</string>
    <string name="booking_info_label">Informasi Pesanan</string>
    <string name="check_in_at_label">Check In pada</string>
    <string name="check_out_at_label">Check Out pada</string>
    <string name="room_cost_per_day_label">Harga tempat tidur per hari</string>
    <string name="patient_data_label">Data pasien</string>
    <string name="patient_name_label">Nama Lengkap</string>
    <string name="patient_birth_date_label">Tanggal Lahir</string>
    <string name="patient_email_label">Email</string>
    <string name="patient_phone_number_label">Nomor HP</string>
    <string name="patient_no_ktp_label">Nomor KTP Pasien</string>
    <string name="patient_address_label">Alamat KTP Pasien</string>
    <string name="patient_gender_label">Jenis Kelamin</string>
    <string name="patient_referral_letter_label">Surat Rujukan Pasien</string>
    <string name="continue_payment_description">Lanjutkan pembayaran sebelum %s untuk memproses pemesanan.</string>
    <string name="profile_label">Profil</string>
    <string name="search_hint">Find hospital</string>
    <string name="indonesian_phone_code">+62</string>
    <string name="indonesian_phone_code_pattern">+62%s</string>
    <string name="phone_number_hint">8xxxxx</string>
    <string name="login_information">Masukkan nomor hp untuk log in atau membuat akun baru.</string>
    <string name="continue_label">Lanjut</string>
    <string name="otp_information">Masukkan kode OTP yang dikirim ke hp kamu.</string>
    <string name="otp_sent_information">Kode telah dikirimkan ke nomor kamu.</string>
    <string name="resend_otp_label">Kirim ulang OTP</string>
    <string name="resend_otp_count_down">Kirim ulang OTP (%s)</string>
    <string name="hi_label">Hai!</string>
    <string name="let_us_know_about_you">Kenalan yuk.</string>
    <string name="name_hint">Nama</string>
    <string name="birth_date_hint">Tanggal Lahir</string>
    <string name="logout_label">Keluar</string>
    <string name="next_label">Lanjut</string>
    <string name="name_field_error">Nama tidak boleh kosong.</string>
    <string name="birth_date_field_error">Tanggal lahir tidak boleh kosong.</string>
    <string name="e_ktp_label">e-KTP</string>
    <string name="selfie_ktp_label">Selfie dengan e-KTP</string>
    <string name="submit_label">Kirim</string>
    <string name="verification_information">Data kamu <b>aman</b> dan hanya digunakan untuk <b>kebutuhan verifikasi</b>.</string>
    <string name="skip_label">Lewati</string>
    <string name="got_it">Mengerti</string>
    <string name="verified_message">Terverifikasi!</string>
    <string name="verified_message_description">Kini kamu dapat <b>memesan tempat tidur</b> pada rumah sakit.</string>
    <string name="uploaded_message">Telah diunggah!</string>
    <string name="uploaded_message_description">Dokumen kamu masih dalam proses verifikasi. Kamu dapat melihat hasilnya di profil kamu.</string>
    <string name="rejected_message">Ditolak!</string>
    <string name="rejected_message_description">Dokumen yang kamu unggah tidak valid. Kamu dapat melakukan verifikasi ulang pada profil kamu.</string>
    <string name="id_verification_label">Verifikasi ID</string>
    <string name="personal_data_label">Data kamu</string>
    <string name="fill_information_message">Isikan beberapa informasi terlebih dahulu.</string>
    <string name="terms_and_condition">Syarat dan Ketentuan</string>
    <string-array name="terms_and_condition_titles">
        <item>Umum</item>
        <item>Ruang Lingkup Layanan</item>
        <item>Aplikasi Q-Hope</item>
        <item>Penggunaan Layanan dan Jasa</item>
        <item>Peraturan Keanggotaan</item>
        <item>Peraturan Khusus Bagi Dokter dan Rumah Sakit</item>
        <item>Hak Kekayaan Intelektual</item>
        <item>DISCLAIMER</item>
        <item>BATASAN TANGGUNG JAWAB</item>
        <item>GANTI RUGI</item>
        <item>PENGHENTIAN</item>
        <item>PRIVASI</item>
        <item>HUKUM YANG MENGATUR</item>
        <item>PENYELESAIAN PERSELISIHAN</item>
        <item>FORCE MAJEURE</item>
    </string-array>
    <string name="ktp_number_hint">Nomor KTP</string>
    <string name="place_of_birth_hint">Tempat Lahir</string>
    <string name="ktp_address_hint">Alamat KTP</string>
    <string name="male_label">Pria</string>
    <string name="female_label">Wanita</string>
    <string name="edit_label">Ubah</string>
    <string name="district_hint">Kecamatan</string>
    <string name="village_hint">Desa/kelurahan</string>
    <string name="city_hint">Kota</string>
    <string name="hamlet_hint">RT/RW</string>
    <string name="religion_hint">Agama</string>
    <string name="blood_type_hint">Golongan Darah</string>
    <string name="confirm_identity">Konfirmasi Identitas</string>
</resources>