<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_24">

    <ImageView
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/drawable_booking_success"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/success_book_a_room_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:textColor="?attr/colorOnSurface" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/success_book_a_room_description"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorTextMedium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back_to_home"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/back_to_home_label" />
</LinearLayout>