<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_login_background"
    android:orientation="vertical"
    android:padding="@dimen/dp_24"
    tools:context=".ui.login.view.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/login_information"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_8"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_12"
                android:text="@string/indonesian_phone_code"
                android:textAppearance="?attr/textAppearanceBody1"
                app:drawableStartCompat="@drawable/ic_indonesian_flag" />

            <EditText
                android:id="@+id/login_phone_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/phone_number_hint"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="14" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_continue"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_8"
        android:enabled="false"
        android:text="@string/continue_label" />
</LinearLayout>