<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_navigation"
    app:startDestination="@id/profileFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.bangkit.team18.qhope.ui.profile.view.ProfileFragment"
        android:label="@string/profile_label"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_profileIdVerificationFragment"
            app:destination="@id/profileIdVerificationFragment" />
        <action
            android:id="@+id/action_profileFragment_to_profileVerificationResultFragment2"
            app:destination="@id/profileVerificationResultFragment" />
        <action
            android:id="@+id/action_profileFragment_to_personalDataFragment"
            app:destination="@id/personalDataFragment" />
        <action
            android:id="@+id/action_profileFragment_to_profilePictureFragment"
            app:destination="@id/profilePictureFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileIdVerificationFragment"
        android:name="com.bangkit.team18.qhope.ui.profile.view.ProfileIdVerificationFragment"
        android:label="@string/id_verification_label"
        tools:layout="@layout/fragment_profile_id_verification">
        <action
            android:id="@+id/action_profileIdVerificationFragment_to_profileVerificationResultFragment"
            app:destination="@id/profileVerificationResultFragment"
            app:popUpTo="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileVerificationResultFragment"
        android:name="com.bangkit.team18.qhope.ui.profile.view.ProfileVerificationResultFragment"
        android:label=""
        tools:layout="@layout/fragment_profile_verification_result">
        <action
            android:id="@+id/action_profileVerificationResultFragment_to_profileIdVerificationFragment"
            app:destination="@id/profileIdVerificationFragment"
            app:popUpTo="@id/profileVerificationResultFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/personalDataFragment"
        android:name="com.bangkit.team18.qhope.ui.profile.view.PersonalDataFragment"
        android:label="@string/personal_data_label"
        tools:layout="@layout/fragment_personal_data">
        <action
            android:id="@+id/action_personalDataFragment_to_editPersonalDataFragment"
            app:destination="@id/editPersonalDataFragment" />
    </fragment>
    <fragment
        android:id="@+id/profilePictureFragment"
        android:name="com.bangkit.team18.qhope.ui.profile.view.ProfilePictureFragment"
        android:label=""
        tools:layout="@layout/fragment_profile_picture">
        <argument
            android:name="photoUrl"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/editPersonalDataFragment"
        android:name="com.bangkit.team18.qhope.ui.profile.view.EditPersonalDataFragment"
        android:label="@string/edit_label"
        tools:layout="@layout/fragment_edit_personal_data" />
</navigation>